2007-08-28  Stefan Harmeling  <harmeling@gmail.com>

	* eval.c (signature_matches): now the type is really checked, see
	test.rha for a simple example...

	* object.c (to_string): symbols are now shown with a backslash.

	* core.c (fn_fn, macro_fn): needed to rewrite both, since inner
	structure of function and withit macros had changed considerably.

	* eval.c (eval_rha_fun): now we look at the signature to decide on
	the function, still we only count argument, but the structure of
	how this is done allows easy extension to types and default
	arguments 

	* parse.c, prules.c: added prules for curlied and squared
	brackets, rewritten parse.c completely and got rid of many of the
	special cases.

2007-08-27  Stefan Harmeling  <harmeling@gmail.com>

	* object.c (equalequal_fn): added cases for BOOL and REAL.

	* testing.rha: rewritten the test stuff with macros.  now the
	s-expressions of the failed tests are shown.

	* prelude.rha: defined types!  added test code for it to test.rha

	* object.c (to_string): changed the handling of primtive
	prototypes.  try e.g. 'ls(17)'

2007-08-24  Stefan Harmeling  <harmeling@gmail.com>

	* core.c (macro_fn): added a macro prule to write macro like
	functions:

	defined = macro (name) has(local, name);

	The reason for this was to avoid the overload stuff for macros,
	thus macros should be different from functions.  This might be
	changed later on.

	* bool_fn.c (bool_and), core.c: move lazy 'or' and 'and' to bool_fn.c

	* parse.c (resolve_code_block): now the semicolon after an
	expression before 'else' is optional.  however, for a code block
	it is not allowed:

	if (true) 17 else 42; next_stm;     // ok
	if (true) 17; else 42; next_stm;    // ok
	if (true) {17} else 42; next_stm;   // ok
	if (true) 17 else {42}  next_stm;   // ok
	if (true) 17 else {42};  next_stm;  // ok
	if (true) 17;; else 42; next_stm;   // wrong (like in C)
	if (true) {17}; else 42; next_stm;  // wrong (like in C)	
