@@ -8,6 +8,7 @@ int_t int_minus(int_t x, int_t y) { return x-y; }
 int_t int_times(int_t x, int_t y) { return x*y; }
 int_t int_divide(int_t x, int_t y) { return x/y; }
 int_t int_neg(int_t x) { return -x; }
+bool_t int_less(int_t x, int_t y) { return x<y; }
 
 int_t int_cast(object_t x)
 {
